Facturación, versión 0.02 - Cliente y ListaDeClientes

--- a/projects/facturacion/inUse/Facturacion/Facturacion.csproj
+++ b/projects/facturacion/inUse/Facturacion/Facturacion.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
     <Compile Include="Facturacion.cs" />
+    <Compile Include="ListaDeClientes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VisorClientes.cs" />
   </ItemGroup>
