--- a/projects/facturacion/inUse/Facturacion/Facturacion.csproj
+++ b/projects/facturacion/inUse/Facturacion/Facturacion.csproj
@@ -43,13 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cabecera.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="Factura.cs" />
     <Compile Include="Facturacion.cs" />
     <Compile Include="ListaDeClientes.cs" />
+    <Compile Include="ListaDeFacturas.cs" />
     <Compile Include="ListaDeProductos.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VisorClientes.cs" />
+    <Compile Include="VisorDeFacturas.cs" />
     <Compile Include="VisorDeProductos.cs" />
   </ItemGroup>
   <ItemGroup>
