--- a/projects/facturacion/inUse/Facturacion/Facturacion.csproj
+++ b/projects/facturacion/inUse/Facturacion/Facturacion.csproj
@@ -47,12 +47,13 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="Factura.cs" />
     <Compile Include="Facturacion.cs" />
+    <Compile Include="LineaDetalle.cs" />
     <Compile Include="ListaDeClientes.cs" />
     <Compile Include="ListaDeFacturas.cs" />
     <Compile Include="ListaDeProductos.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VisorClientes.cs" />
+    <Compile Include="VisorDeClientes.cs" />
     <Compile Include="VisorDeFacturas.cs" />
     <Compile Include="VisorDeProductos.cs" />
   </ItemGroup>
